--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "supervisor node --debug ./bin/www",
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.2",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.15.0",
-    "mongodb": "^2.2.22"
+    "mongodb": "^2.2.22",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "debug": "^3.1.0"
